--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "front-test",
   "private": true,
   "dependencies": {
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "zepto": "^1.1.6"
   },
   "devDependencies": {
     "chai": "^3.5.0",
