--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "private": true,
   "dependencies": {
     "bootstrap": "~3.2.0",
-    "zepto": "^1.1.6"
+    "zepto": "^1.1.6",
+    "reveal.js": "^3.3.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
